<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnShowLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Show" />
    
    

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnShowLocation"
        android:layout_alignRight="@+id/btnShowLocation"
        android:layout_below="@+id/btnShowLocation"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:text="@string/text" />

    <Button
        android:id="@+id/exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sendLocation"
        android:layout_alignTop="@+id/sendLocation"
        android:layout_marginTop="60dp"
        android:onClick="onExit"
        android:text="@string/exit" />

    <Button
        android:id="@+id/sendLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:onClick="onSend"
        android:text="@string/send"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sendLocation"
        android:layout_alignRight="@+id/sendLocation"
        android:layout_centerVertical="true"
        android:text="@string/number"
        android:visibility="visible" />

</RelativeLayout>